<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/largePadding"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveHabitButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false">

            <!-- Поле назви звички -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habitNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/habit_name"
                app:hintTextColor="@color/textPrimaryLight"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habitNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text|textCapSentences"
                    android:imeOptions="actionDone"
                    android:textColor="@color/textPrimary"
                    android:textColorHint="@color/textPrimaryLight"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Заголовок повторень -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weekDayPickerHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habit_repeat"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="@dimen/largeMargin"
                style="@style/HabitFormHeaderStyle"
                app:layout_constraintTop_toBottomOf="@id/habitNameInputLayout"/>

            <!-- Вибір днів тижня -->
            <com.santtuhyvarinen.habittracker.views.WeekDayPickerView
                android:id="@+id/weekDayPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:layout_constraintTop_toBottomOf="@id/weekDayPickerHeader"/>

            <!-- Заголовок пріоритету -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/habitPriorityHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habit_priority"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="@dimen/largeMargin"
                style="@style/HabitFormHeaderStyle"
                app:layout_constraintTop_toBottomOf="@id/weekDayPicker"/>

            <!-- Повзунок пріоритету -->
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/habitPrioritySeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/habitPriorityHeader"/>

            <!-- Заголовок вибору іконки -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iconPickerHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habit_icon"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="@dimen/largeMargin"
                style="@style/HabitFormHeaderStyle"
                app:layout_constraintTop_toBottomOf="@id/habitPrioritySeekBar"/>

            <!-- Вибір іконки -->
            <com.santtuhyvarinen.habittracker.views.IconPickerView
                android:id="@+id/iconPickerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iconPickerHeader"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- Кнопка збереження -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveHabitButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/create_habit"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="12dp"
        style="@style/ButtonStyle"
        android:layout_margin="@dimen/largeMargin"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Прогрес -->
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressTint="@color/colorPrimary"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
