<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/largeMargin"
    android:layout_marginRight="@dimen/largeMargin"
    android:layout_marginTop="@dimen/largeMargin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground"
    app:cardCornerRadius="18dp"
    app:cardElevation="8dp"
    app:strokeWidth="0dp"
    android:backgroundTint="@color/cardBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/largePadding">

        <!-- Іконка задачі -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/taskIconSize"
            android:layout_height="@dimen/taskIconSize"
            android:tint="@color/colorIconTint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Назва -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textColor="@color/textPrimary"
            style="@style/ItemTitleStyle"
            android:layout_marginStart="12dp"
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon"/>

        <!-- Очки -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/scoreViewHeight"
            android:textColor="@color/colorAccent"
            style="@style/ScoreTextStyle"
            android:layout_marginTop="@dimen/mediumMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <!-- Кнопка: Завдання виконано -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/taskSuccessButton"
            android:layout_width="@dimen/roundButtonSize"
            android:layout_height="@dimen/roundButtonSize"
            android:src="@drawable/ic_task_success"
            android:tint="@color/colorSuccess"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/task_set_success"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/mediumMargin"/>

        <!-- Кнопка: Пропустити -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/taskSkipButton"
            android:layout_width="@dimen/roundButtonSize"
            android:layout_height="@dimen/roundButtonSize"
            android:src="@drawable/ic_task_skip"
            android:tint="@color/colorSecondaryDark"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/task_set_skip"
            android:layout_marginEnd="@dimen/smallMargin"
            app:layout_constraintRight_toLeftOf="@id/taskSuccessButton"
            app:layout_constraintTop_toTopOf="@id/taskSuccessButton"/>

        <!-- Кнопка: Невдача -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/taskFailButton"
            android:layout_width="@dimen/roundButtonSize"
            android:layout_height="@dimen/roundButtonSize"
            android:src="@drawable/ic_task_fail"
            android:tint="@color/colorFail"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/task_set_failed"
            android:layout_marginEnd="@dimen/smallMargin"
            app:layout_constraintRight_toLeftOf="@id/taskSkipButton"
            app:layout_constraintTop_toTopOf="@id/taskSkipButton"/>

        <!-- Popup -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/taskPopUp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:padding="@dimen/largePadding"
            style="@style/TaskPopUpStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
